# pointint

./: .env.example  .gitignore  CLAUDE.md
.agent/: plugin.json
.agent/.claude-plugin/: marketplace.json
.claude/: settings.json
backend/: .env.example  CLAUDE.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: ani.py  background.py  cursor.py  health_check.py
backend/app/core/: config.py
backend/app/services/: ani.py  background.py  cursor.py  health.py  inf.py
backend/tests/: test_ani.py  test_api.py
docs/: AI 전략 상세.md  Pointint 수익화 전략 니치 SaaS를 위한 하이브리드 모델.md  SEO-GEO 체크리스트.md  Windows 커서 스펙.md  [보고서] 디지털 개성 구현을 위한 커서 커스텀 플랫폼 포인틴트(Pointint).md  경쟁 사이트.md  기능 상세.md  모바일 대응 정책.md  브랜드 철학.md  비주얼 톤앤매너.md  비즈니스 상세.md  소셜 공유 메타.md  운영 정책.md  차별점.md  프로젝트 개요 (v1 3).md  핵심 카피.md
docs/plans/: 2026-03-27-docs-to-point-promotion-design.md  2026-03-27-pointint-strategy-detail.md  2026-03-28-pointint-home-content-and-shell-design.md
frontend/: .env.example  CLAUDE.md  package-lock.json  package.json  vitest.config.ts
frontend/example/: achievements.html  archive.html  community showcase.html  creator guide.html  cursor battle.html  cursor detail.html  cursor studio.html  help center.html  homepage.html  mobile1.html  mobile2.html  mobile3.html  mobile4.html  subscription.html  system updates.html
frontend/public/: robots.txt
frontend/tests/: analytics-page-view.test.tsx  consent-banner.test.tsx  header.test.tsx  i18n-ko-copy.test.ts  setup.ts  (+3 more)
hf-space/: README.md  app.py  requirements.txt
point/: 00-INDEX.md  POINT_RULES.md
(+224 files in other folders)
